mcp-setup : implemented the mcp server with tool and integrated into chat bot

--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,14 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
+        "laravel/mcp": "^0.2.0",
         "laravel/tinker": "^2.10.1",
-        "prism-php/prism": "^0.89.0"
+        "prism-php/prism": "^0.89.0",
+        "prism-php/relay": "^1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laravel/boost": "^1.2",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.41",
