media-analysis : implement the image and pdf analysis tool

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "6274:6274" # MCP Inspector
     volumes:
       - ./:/var/www
+      - ./local.ini:/usr/local/etc/php/conf.d/local.ini
     depends_on:
       mysql-test:
         condition: service_started
