--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/mcp": "^0.2.0",
         "laravel/tinker": "^2.10.1",
         "prism-php/prism": "^0.89.0",
-        "prism-php/relay": "^1.3"
+        "prism-php/relay": "^1.3",
+        "spatie/pdf-to-text": "^1.54"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
